--- a/index.html
+++ b/index.html
@@ -108,20 +108,20 @@
                     <rs-bg-elem style="background: url('content/ipsera/images/ipsera-slider-pic1.jpg') no-repeat center center; background-size: cover;"></rs-bg-elem>
                   </rs-layer>
                   <rs-layer id="slider-1-slide-1-layer-2" data-type="text" data-rsp_ch="on" data-xy="x:c;xo:342px,342px,177px,177px;yo:450px,450px,233px,233px;" data-text="w:normal;s:18,18,9,9;l:30,30,15,15;fw:500;"
-                    data-dim="w:500px,500px,259px,259px;" data-vbility="t,t,f,t" data-frame_0="y:50,50,25,25;" data-frame_1="st:150;sp:800;sR:150;" data-frame_999="o:0;st:w;sR:8050;" style="z-index:12;font-family:Red Hat Display;">
+                    data-dim="w:500px,500px,259px,259px;" data-vbility="t,t,f,t" data-frame_0="y:50,50,25,25;" data-frame_1="st:150;sp:800;sR:150;" data-frame_999="o:0;st:w;sR:8050;" style="z-index:12;font-family:"Red Hat Display";">
                     Lorem ipsum dolor sit amet enim. Etiam ullamcorper. Suspendisse a pellentesque dui, non felis. Maecenas malesuada elit lectus felis malesuada.
                   </rs-layer>
 
                   <a id="slider-1-slide-1-layer-3" class="rs-layer" href="#" target="_self" rel="nofollow" data-type="text" data-rsp_ch="on" data-xy="x:c;xo:211px,131px,67px,67px;yo:152px,152px,78px,78px;"
                     data-text="w:normal;s:14,14,6,6;l:25,25,12,12;fw:700;" data-vbility="t,t,f,t" data-padding="b:5,5,2,2;" data-border="bos:solid;boc:#21956c;bow:0,0,2px,0;" data-frame_0="y:50,50,25,25;" data-frame_1="st:50;sp:800;sR:50;"
-                    data-frame_999="o:0;st:w;sR:8150;" style="z-index:10;font-family:Red Hat Display;">RIO DE JANEIRO, 2ND - 5TH APRIL</a>
+                    data-frame_999="o:0;st:w;sR:8150;" style="z-index:10;font-family:"Red Hat Display";">RIO DE JANEIRO, 2ND - 5TH APRIL</a>
 
                   <rs-layer id="slider-1-slide-1-layer-4" data-type="text" data-rsp_ch="on" data-xy="x:c;xo:342px,342px,0,342px;y:t,t,m,m;yo:230px,230px,150px,150px;" data-text="w:normal;s:60;l:60;fw:500;a:left,left,center,center;"
-                    data-dim="w:500px,500px,550px,550px;" data-frame_0="y:50,50,25,25;" data-frame_1="st:100;sp:800;sR:100;" data-frame_999="o:0;st:w;sR:8100;" style="z-index:11;font-family:Red Hat Display;">
+                    data-dim="w:500px,500px,550px,550px;" data-frame_0="y:50,50,25,25;" data-frame_1="st:100;sp:800;sR:100;" data-frame_999="o:0;st:w;sR:8100;" style="z-index:11;font-family:"Red Hat Display";">
                     IPSERA 2024: <span style="color: #161922;">Sustainable innovation</span>
                   </rs-layer><a id="slider-1-slide-1-layer-5" class="rs-layer rev-btn" href="#" target="_self" rel="nofollow" data-type="button" data-rsp_ch="on"
                     data-xy="x:c;xo:165px,165px,0,165px;y:t,t,m,m;yo:594px,594px,290px,290px;" data-text="w:normal;s:13;l:55;fw:700;" data-dim="minh:0px,0px,none,0px;" data-padding="r:35;l:35;" data-frame_0="y:50,50,25,25;"
-                    data-frame_1="st:200;sp:800;sR:200;" data-frame_999="o:0;st:w;sR:8000;" data-frame_hover="bgc:#6db02f;bor:0px,0px,0px,0px;sp:200;e:power1.inOut;" style="z-index:13;background-color:rgba(0,0,0,1);font-family:Red Hat Display;">READ
+                    data-frame_1="st:200;sp:800;sR:200;" data-frame_999="o:0;st:w;sR:8000;" data-frame_hover="bgc:#6db02f;bor:0px,0px,0px,0px;sp:200;e:power1.inOut;" style="z-index:13;background-color:rgba(0,0,0,1);font-family:"Red Hat Display";">READ
                     MORE </a>
                 </rs-slide>
               </rs-slides>
